// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature/> Renders the <Feature/> with just a subtitle 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 dUyrwq"
>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 dQnJQV"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature/> Renders the <Feature/> with just a title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 dUyrwq"
>
  <h1
    class="feature__Title-sc-6swrp6-1 jiOEhx"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature/> Renders the <Feature/> with populated data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 dUyrwq"
>
  <h1
    class="feature__Title-sc-6swrp6-1 jiOEhx"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 dQnJQV"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
